[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/technical/DamageImmunityTimer.gd" type="Script" id=1]

[node name="DamageImmunityTimer" type="Timer"]
script = ExtResource( 1 )

[node name="FlashEffectTimer" type="Timer" parent="."]
[connection signal="timeout" from="." to="." method="_on_DamageImmunityTimer_timeout"]
[connection signal="timeout" from="FlashEffectTimer" to="." method="_on_FlashEffectTimer_timeout"]
